force-app/main/default/objects/VG_Policy_Schedule_Endorsement__c/VG_Policy_Schedule_Endorsement__c.object-meta.xml
<CustomObject>
    <label>Policy Endorsements</label>
    <nameField>
        <label>Policy Schedule Endorsement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Endorsements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>