force-app/main/default/objects/VG_Policy_Schedule_Endorsement__c/fields/VG_Endorsement_Details__c.field-meta.xml
<CustomField>
    <fullName>VG_Endorsement_Details__c</fullName>
    <label>Endorsement Details</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>