force-app/main/default/objects/VG_Policy_Schedule_Endorsement__c/fields/VG_Endorsement_Number__c.field-meta.xml
<CustomField>
    <fullName>VG_Endorsement_Number__c</fullName>
    <label>Endorsement Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>