force-app/main/default/objects/VG_Policy_Schedule_Endorsement__c/fields/VG_Policy_Schedule__c.field-meta.xml
<CustomField>
    <fullName>VG_Policy_Schedule__c</fullName>
    <label>Policy Schedule</label>
    <referenceTo>Policy_Schedule__c</referenceTo>
    <relationshipLabel>Policy Endorsements</relationshipLabel>
    <relationshipName>Policy_Schedule_Endorsements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>