force-app/main/default/objects/VG_Policy_Schedule_Endorsement__c/fields/VG_Premium__c.field-meta.xml
<CustomField>
    <fullName>VG_Premium__c</fullName>
    <label>Annual Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>