force-app/main/default/objects/VG_Policy_Schedule_Endorsement__c/fields/VG_Sub_limit__c.field-meta.xml
<CustomField>
    <fullName>VG_Sub_limit__c</fullName>
    <label>Sub-limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>