force-app/main/default/objects/VG_Policy_Schedule_Endorsement__c/fields/VG_Title__c.field-meta.xml
<CustomField>
    <fullName>VG_Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>