force-app/main/default/objects/VG_Policy_Schedule_Endorsement__c/fields/VG_Type__c.field-meta.xml
<CustomField>
    <fullName>VG_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sub-limits</fullName>
            </value>
            <value>
                <fullName>Endorsements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>