force-app/main/default/objects/VG_Policy_Schedule_Endorsement__c/validationRules/PE_Name_Updation.validationRule-meta.xml
<ValidationRule>
    <fullName>PE_Name_Updation</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT( ISNEW() ) , ISCHANGED( Name ) )</errorConditionFormula>
    <errorMessage>Cannot update Policy Endorsement number</errorMessage>
</ValidationRule>