force-app/main/default/objects/VG_Policy_Schedule_Endorsement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VG_Endorsement_Details__c</columns>
    <columns>VG_Sub_limit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>